feat: first frontend version and backend fixes
