# apps/api/src/routes/v1/index.ts
@@ -2,6 +2,7 @@ import { Router } from 'express';
 import sessionRoutes from '../../modules/session/session.routes';
 import pokedexRoutes from '../../modules/pokedex/pokedex.routes';
 import pokemonRoutes from '../../modules/pokemon/pokemon.routes';
+import userRoutes from '../../modules/user/user.routes';
 
 const router: Router = Router();
 
@@ -20,5 +21,6 @@ router.get('/', (req, res) => {
 router.use('/session', sessionRoutes);
 router.use('/pokedex', pokedexRoutes);
 router.use('/pokemon', pokemonRoutes);
+router.use('/users', userRoutes);
 
 export default router;
